# stack

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
configs/: ablation_7d.yaml  default.yaml
data/models/: .gitkeep
data/processed/: .gitkeep
data/raw/: .gitkeep
docs/: gpu_access.md  gruss_me740_proposal.tex  results_v2.md
firmware/: README.md
firmware/board_test/: board_test.ino
firmware/encoder_reader/: encoder_reader.ino
hardware/: BUILD.md  DESIGN.md
hardware/analysis/: design_validation.py  finger_analysis.py  finger_sketch.py  finger_sketch_v2.py  gripper_design.py  gripper_design_v2.py
hardware/analysis/gripper_physics/: __init__.py  __main__.py  actuation.py  analysis.py  contact.py  geometry.py  solver.py  visualization.py
hardware/cad/archive/: 3-proximal.3mf  camera-mount.3mf  finger-connector.3mf  index-finger-1.3mf  index-index.3mf  index-mcp-rol.3mf  index-pip-pins.3mf  index-proximal.3mf  palm.3mf  (+11 more)
ios/: PLAN.md
notebooks/: run_slam.ipynb  train_colab.ipynb
scripts/: scc_test_data.py  scc_train.sh  scc_train_7d.sh
stack/: __init__.py
stack/data/: __init__.py  dataset.py  encoder.py  iphone_loader.py  synthetic.py  training_dataset.py  transforms.py
stack/policy/: __init__.py  diffusion.py
stack/scripts/: __init__.py  calibrate_scale.py  collect.py  eval.py  eval_viz.py  pack_for_scc.py  run_slam.py  sim_deploy.py  sim_replay.py  train.py  visualize_iphone.py
stack/viz/: __init__.py  eval_viz.py  iphone_viz.py
tests/: __init__.py  test_encoder.py  test_eval_viz.py  test_training_pipeline.py
(+35 files in other folders)
