[project]
name = "stack"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "torch",
    "torchvision",
    "pillow",
    "omegaconf",
    "tqdm",
]

[project.optional-dependencies]
wandb = ["wandb"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
